--- a/9.html
+++ b/9.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Forvia Bank Scan Pro V5.2</title>
+<title>Forvia Bank Scan Mobil Ver5.3</title>
 <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 <style>
-/* --- GLOBÁLIS BEÁLLÍTÁSOK (VISSZAÁLLÍTVA) --- */
+/* --- EREDETI STÍLUSOK (V4.7) --- */
 * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-
 :root {
     --bg-gradient: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
     --accent: #3b82f6;
+    --accent-glow: rgba(59, 130, 246, 0.5);
     --glass: rgba(255, 255, 255, 0.05);
     --glass-border: rgba(255, 255, 255, 0.1);
     --text-main: #f8fafc;
@@ -20,73 +20,69 @@
     --ok-color: #10b981;
     --err-color: #ef4444;
 }
-
 body {
-    font-family: -apple-system, system-ui, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     background: var(--bg-gradient); color: var(--text-main);
-    margin: 0; padding: 0; height: 100dvh; display: flex; flex-direction: column; overflow: hidden;
+    margin: 0; padding: 0; width: 100%; height: 100dvh; display: flex; flex-direction: column; overflow: hidden;
 }
-
-/* --- FEJLÉC VISSZAÁLLÍTVA --- */
 .header {
     flex-shrink: 0; width: 100%; background: rgba(15, 23, 42, 0.95);
     backdrop-filter: blur(10px); border-bottom: 1px solid var(--glass-border);
     padding: 15px 20px; text-align: center; z-index: 100;
     padding-top: max(15px, env(safe-area-inset-top)); 
 }
-.header h1 { margin: 0; font-size: 1.1rem; font-weight: 700; text-transform: uppercase; color: white; }
-.header .credits { font-size: 0.75rem; color: var(--text-muted); margin-top: 4px; }
+.header h1 { margin: 0; font-size: 1.1rem; font-weight: 700; letter-spacing: 1px; text-transform: uppercase; color: white; }
+.header .credits { font-size: 0.75rem; color: var(--text-muted); margin-top: 4px; font-weight: 500; }
 .header .credits span { color: var(--accent); }
 
 .main-content {
     flex: 1; display: flex; flex-direction: column; padding: 20px;
-    overflow-y: auto; align-items: center; width: 100%;
+    overflow-y: auto; align-items: center; width: 100%; -webkit-overflow-scrolling: touch;
 }
 
 #reader {
     width: 100%; max-width: 300px; aspect-ratio: 1 / 1; border-radius: 20px;
-    overflow: hidden; margin-bottom: 20px; border: 3px solid var(--accent); display: none;
+    overflow: hidden; margin-bottom: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    border: 3px solid var(--accent); display: none; background: black; flex-shrink: 0;
 }
+#reader video { width: 100% !important; height: 100% !important; object-fit: cover; }
 
-/* --- INPUT MEZŐK VISSZAÁLLÍTVA (V4.7) --- */
-.input-wrapper { width: 100%; max-width: 500px; display: flex; gap: 12px; margin-bottom: 25px; }
+.input-wrapper { width: 100%; max-width: 500px; display: flex; gap: 12px; margin-bottom: 25px; flex-shrink: 0; }
 input[type=text] {
     flex: 1; background: var(--glass); border: 1px solid var(--glass-border);
     padding: 16px 20px; border-radius: 16px; color: white; font-size: 1.2rem;
-    font-weight: 600; text-align: center; outline: none;
+    font-weight: 600; text-align: center; outline: none; backdrop-filter: blur(5px); min-width: 0;
 }
 .scan-btn {
     width: 60px; height: 60px; border-radius: 16px; border: none;
-    background: var(--accent); color: white; display: flex; align-items: center; justify-content: center;
+    background: var(--accent); color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
+    box-shadow: 0 4px 15px var(--accent-glow); flex-shrink: 0; transition: all 0.2s;
 }
 .scan-btn.active { background: var(--err-color); }
 
-/* --- PRO EREDMÉNY PANEL (RÁCCSAL) --- */
+/* --- ÚJ: PRO GRID MEGJELENÍTÉS (CSAK EZ VÁLTOZOTT) --- */
 #resultsWrapper { width: 100%; max-width: 500px; padding-bottom: 20px; }
 .result-card {
     background: #1e293b; border-radius: 20px; border: 1px solid var(--glass-border);
     overflow: hidden; animation: popIn 0.3s ease-out; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
 }
 @keyframes popIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
-
 .res-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 1px; background: var(--glass-border); }
 .res-item { background: #1e293b; padding: 15px; text-align: center; }
 .res-full { grid-column: span 2; border-bottom: 1px solid var(--glass-border); }
-.res-label { font-size: 0.65rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 4px; }
+.res-label { font-size: 0.65rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 4px; letter-spacing: 0.5px; }
 .res-value { font-size: 1.3rem; font-weight: 800; color: white; word-break: break-all; }
 .res-value.highlight { color: #fbbf24; }
 
-/* --- ELŐZMÉNYEK --- */
+/* --- ELŐZMÉNYEK VISSZAÁLLÍTVA --- */
 .footer-history {
     background: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--glass-border);
     height: 150px; flex-shrink: 0; overflow-y: auto; padding: 15px;
+    padding-bottom: max(15px, env(safe-area-inset-bottom));
 }
-.history-title { 
-    display: flex; justify-content: space-between; align-items: center;
-    font-size: 0.75rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 10px; font-weight: bold; 
-}
+.history-title { display: flex; justify-content: space-between; align-items: center; font-size: 0.7rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 10px; font-weight: bold; }
 .h-item {
-    display: flex; align-items: center; padding: 8px 12px; margin-bottom: 6px; 
+    display: flex; align-items: center; padding: 10px 15px; margin-bottom: 8px;
     background: rgba(255,255,255,0.03); border-radius: 10px; font-size: 0.85rem;
 }
 .h-time { color: var(--text-muted); margin-right: 15px; font-weight: bold; }
@@ -100,7 +96,7 @@ input[type=text] {
 </div>
 
 <div class="main-content">
-    <div id="loadMsg" style="font-size:0.75rem; color:var(--text-muted); margin-bottom:15px;">Adatbázis betöltése...</div>
+    <div id="loadMsg" style="font-size: 0.8rem; color: var(--text-muted); margin-bottom: 15px;">Adatbázis betöltése...</div>
     <div id="reader"></div>
     <div class="input-wrapper">
         <input type="text" id="barcodeInput" placeholder="Scan Barcode" autocomplete="off">
@@ -124,6 +120,9 @@ input[type=text] {
 <audio id="sndError" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
 <script>
+/* ========================================================
+   EREDETI LOGIKA (V4.7) - ÉRINTETLENÜL
+   ======================================================== */
 const input = document.getElementById('barcodeInput');
 const resultsWrapper = document.getElementById('resultsWrapper');
 const historyList = document.getElementById('historyList');
@@ -133,7 +132,9 @@ const stopIcon = document.getElementById('stopIcon');
 const scanBtn = document.querySelector('.scan-btn');
 const readerDiv = document.getElementById('reader');
 
-let html5QrCode = null, isCameraRunning = false, bankDB = [];
+let html5QrCode = null;
+let isCameraRunning = false;
+let bankDB = [];
 
 async function init() {
     await loadBankCSV();
@@ -159,7 +160,7 @@ async function loadBankCSV() {
                 model: (modelIdx !== -1 && cols[modelIdx]) ? cols[modelIdx].trim() : "BANK"
             });
         });
-        loadMsg.innerText = `ADATBÁZIS KÉSZ: ${bankDB.length} TÉTEL`;
+        loadMsg.innerText = `Adatbázis kész: ${bankDB.length} tétel`;
     } catch (e) { loadMsg.innerText = "HIBA: bank.csv!"; }
 }
 
@@ -167,7 +168,8 @@ input.addEventListener('keypress', (e) => {
     if (e.key === 'Enter') {
         const code = input.value.trim().toUpperCase();
         if (code) search(code);
-        input.value = ''; input.blur();
+        input.value = '';
+        input.blur();
     }
 });
 
@@ -185,23 +187,21 @@ function search(code) {
                     <div class="res-item res-full"><div class="res-label">Modelnév</div><div class="res-value">${m.model}</div></div>
                     <div class="res-item"><div class="res-label">Gép azonosító</div><div class="res-value">${m.gep}</div></div>
                     <div class="res-item"><div class="res-label">Pozíció</div><div class="res-value highlight">#${m.poz}</div></div>
-                    <div class="res-item"><div class="res-label">ID</div><div class="res-value" style="font-size:0.9rem;">${m.id}</div></div>
+                    <div class="res-item"><div class="res-label">Azonosító (ID)</div><div class="res-value" style="font-size:0.9rem;">${m.id}</div></div>
                     <div class="res-item"><div class="res-label">MSD</div><div class="res-value" style="color:#10b981;">${m.msd}</div></div>
-                </div>
-            `;
+                </div>`;
             resultsWrapper.appendChild(card);
         });
         saveToHistory(code);
     } else {
         playSound(false);
-        resultsWrapper.innerHTML = '<div style="color:var(--err-color); font-weight:bold; margin-top:20px;">NINCS A LISTÁBAN</div>';
+        resultsWrapper.innerHTML = '<div style="color:var(--err-color); font-weight:bold; text-align:center; margin-top:20px;">NINCS A LISTÁBAN</div>';
     }
 }
 
 function saveToHistory(code) {
     const time = new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-    const history = JSON.parse(localStorage.getItem('scanHistory') || '[]');
-    // Csak egyszer mentjük el a kódot a listába
+    let history = JSON.parse(localStorage.getItem('scanHistory') || '[]');
     if (!history.some(h => h.code === code)) {
         history.unshift({ code, time });
         if(history.length > 30) history.pop();
@@ -216,8 +216,7 @@ function renderHistory() {
         <div class="h-item">
             <span class="h-time">${item.time}</span>
             <span><b>${item.code}</b></span>
-        </div>
-    `).join('');
+        </div>`).join('');
 }
 
 function clearHistory() {
@@ -225,7 +224,10 @@ function clearHistory() {
     renderHistory();
 }
 
+/* --- KAMERA KEZELÉS (EREDETI V4.7 ALAPJÁN) --- */
 function handleCameraButton() {
+    resultsWrapper.innerHTML = ''; 
+    input.value = '';
     if (isCameraRunning) forceStopCamera();
     else startCamera();
 }
@@ -235,28 +237,46 @@ function startCamera() {
     camIcon.style.display = 'none';
     stopIcon.style.display = 'block';
     scanBtn.classList.add('active');
-    if (!html5QrCode) html5QrCode = new Html5Qrcode("reader");
-    html5QrCode.start({ facingMode: "environment" }, { fps: 20, qrbox: 200 }, (txt) => {
-        forceStopCamera().then(() => {
-            input.value = txt; search(txt.toUpperCase());
-        });
-    }).then(() => isCameraRunning = true);
+
+    if (html5QrCode === null) html5QrCode = new Html5Qrcode("reader");
+
+    html5QrCode.start(
+        { facingMode: "environment" }, 
+        { fps: 20, qrbox: 200 },
+        (decodedText) => {
+            forceStopCamera().then(() => {
+                input.value = decodedText;
+                search(decodedText.trim().toUpperCase());
+            });
+        },
+        () => {}
+    ).then(() => { isCameraRunning = true; });
 }
 
 function forceStopCamera() {
-    return new Promise(resolve => {
+    return new Promise((resolve) => {
         if (html5QrCode) {
             html5QrCode.stop().then(() => {
-                cleanupUI(); resolve();
-            }).catch(() => { cleanupUI(); resolve(); });
-        } else { cleanupUI(); resolve(); }
+                cleanupUI();
+                resolve();
+            }).catch(() => {
+                cleanupUI();
+                resolve();
+            });
+        } else {
+            cleanupUI();
+            resolve();
+        }
     });
 }
 
 function cleanupUI() {
-    html5QrCode = null; isCameraRunning = false;
-    readerDiv.style.display = 'none'; camIcon.style.display = 'block';
-    stopIcon.style.display = 'none'; scanBtn.classList.remove('active');
+    html5QrCode = null;
+    isCameraRunning = false;
+    readerDiv.style.display = 'none';
+    camIcon.style.display = 'block';
+    stopIcon.style.display = 'none';
+    scanBtn.classList.remove('active');
 }
 
 function playSound(ok) {
