--- a/index.html
+++ b/index.html
@@ -85,6 +85,28 @@
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
+        /* --- HÍRSÁV STÍLUS --- */
+        .ticker-wrap {
+            position: fixed; bottom: 0; left: 0; width: 100%; overflow: hidden; height: 36px;
+            background-color: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--accent);
+            z-index: 1000; backdrop-filter: blur(5px);
+            padding-left: 100%; box-sizing: content-box;
+        }
+        .ticker-move {
+            display: inline-block; height: 36px; line-height: 36px; white-space: nowrap;
+            padding-right: 100%; box-sizing: content-box;
+            animation: ticker 30s linear infinite; /* 30 másodperc alatt fut végig */
+        }
+        .ticker-item {
+            display: inline-block; padding: 0 2rem; font-size: 0.9rem; color: #fbbf24;
+            font-weight: 600; text-transform: uppercase; letter-spacing: 1px;
+        }
+        @keyframes ticker {
+            0% { transform: translate3d(0, 0, 0); }
+            100% { transform: translate3d(-100%, 0, 0); }
+        }
+        /* --------------------- */
+
         .sidebar {
             position: fixed; left: 0; top: 0;
             width: 280px; height: 100%; background: #111827;
@@ -176,11 +198,17 @@
         </p>
 
         <div class="device-info">
-            Ez a verzió laptop és telefon kijelzőre lett optimalizálva
+            Ez a verzió laptop és telefon kijelzőre lett optimalizálva.
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
-</div>
+
+    <div class="ticker-wrap">
+        <div class="ticker-move">
+            <div class="ticker-item">📢 FORVIA HUB INFORMÁCIÓK: Üdvözlünk a rendszerben! A havi leltár időpontja Január 31. --- Minden rendszer megfelelően működik. --- Karbantartás jelenleg nincs tervezve.</div>
+        </div>
+    </div>
+    </div>
 
 <iframe id="content-frame" name="appFrame"></iframe>
 
@@ -188,7 +216,7 @@
     <div class="sidebar-header">
         <h2>
             <span style="color: white;">FORVIA</span>
-            <span style="color: var(--accent);">SMT</span>
+            <span style="color: var(--accent);">HUB</span>
         </h2>
     </div>
 
